tests/ui/type/type-check/cannot_infer_local_or_array.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot_infer_local_or_array.rs:2:13
   |
LL |     let x = [];
   |             ^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
